making get categories dynamic

--- a/templates/get_categories.phtml
+++ b/templates/get_categories.phtml
@@ -1,7 +1,15 @@
-<?php
-
-echo "<pre>";
-var_dump($categories);
-echo "</pre>";
-
-?>
+<ul>
+    <?php
+        foreach($categories as $category)
+        {
+            ?>
+            <li>
+                <article>
+                    <h2><?= $category->getName(); ?></h2>
+                    <a href="">Voir la catégorie</a>
+                </article>
+            </li>
+            <?php
+        }
+    ?>
+</ul>
