--- a/templates/layout.phtml
+++ b/templates/layout.phtml
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf8" />
         <title>Distorsion</title>
+        <link rel="stylesheet" href="assets/styles/css/style.css" />
     </head>
     <body>
         <?php
